objects/Floorwalking__c.object
<CustomObject>
    <description>Any issues pertaining to Customer Support or Floorwalking</description>
    <fields>
        <fullName>CommunicationTrainingPlan_Impact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Communication / Training Plan Impact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DetectionDate__c</fullName>
        <label>Detection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpectedBenefitBusinessImpact__c</fullName>
        <label>Expected Benefit / Business Impact</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExpectedDueDate__c</fullName>
        <label>Expected Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReasonforClosing__c</fullName>
        <label>Reason for Closing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Closed - Documented</fullName>
                </value>
                <value>
                    <fullName>Closed - Transferred to a Defect</fullName>
                </value>
                <value>
                    <fullName>Closed - Transferred to an Idea</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Wave</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Release__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Deployment Wave</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Floorwalking</relationshipLabel>
        <relationshipName>Floorwalking</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <label>Requestor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Support Request</fullName>
                </value>
                <value>
                    <fullName>Floorwalking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UserCommunicationNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Communication Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserGuideImpact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Guide Impact?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Support_Requests_Floorwalking</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Floorwalking</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Floorwalking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Floorwalking</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>